fixed running the benchmarks from within NetBeans

--- a/benchmark/pom.xml
+++ b/benchmark/pom.xml
@@ -88,6 +88,10 @@
             <plugin>
                 <groupId>net.alchim31.maven</groupId>
                 <artifactId>scala-maven-plugin</artifactId>
+                <configuration>
+                    <source>${javac.target}</source>
+                    <target>${javac.target}</target>
+                </configuration>
                 <executions>
                     <execution>
                         <phase>process-sources</phase>
