--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -13,11 +13,6 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <encoding>UTF-8</encoding>
-        
-        <!-- dependencies -->
-        <scala.tools.version>2.11</scala.tools.version>
-        <scala.binary.version>2.11</scala.binary.version>
-        <scala.version>2.11.4</scala.version>
     </properties>
     
     <dependencyManagement>
@@ -25,7 +20,7 @@
             <dependency>
                 <groupId>org.scala-lang</groupId>
                 <artifactId>scala-library</artifactId>
-                <version>${scala.version}</version>
+                <version>2.11.6</version>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
@@ -68,8 +63,8 @@
                     <version>3.2.0</version>
                     <configuration>
                         <recompileMode>incremental</recompileMode>
-                        <scalaCompatVersion>${scala.binary.version}</scalaCompatVersion>
-                        <scalaVersion>${scala.version}</scalaVersion>
+                        <scalaCompatVersion>2.11</scalaCompatVersion>
+                        <scalaVersion>2.11.6</scalaVersion>
                     </configuration>
                     <executions>
                         <execution>
