--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -2,69 +2,93 @@
 <!-- Copyright (C) 2015 René Kraneis. -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    
+
     <name>Project Euler (Parent)</name>
     <groupId>de.rkraneis.projecteuler</groupId>
     <artifactId>projecteuler-parent</artifactId>
     <version>0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
-    
+
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <encoding>UTF-8</encoding>
     </properties>
-    
+
     <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>org.scala-lang</groupId>
                 <artifactId>scala-library</artifactId>
-                <version>2.11.6</version>
+                <version>2.11.7</version>
+            </dependency>
+            <dependency>
+                <groupId>org.scala-lang.modules</groupId>
+                <artifactId>scala-java8-compat_2.11</artifactId>
+                <version>0.7.0</version>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
-                <version>1.7.10</version>
+                <version>1.7.12</version>
             </dependency>
 
             <!-- Test -->
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
-                <version>4.11</version>
+                <version>4.12</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.scalatest</groupId>
                 <artifactId>scalatest_2.11</artifactId>
-                <version>2.2.3</version>
+                <version>2.2.5</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.scala-lang.modules</groupId>
                 <artifactId>scala-parser-combinators_2.11</artifactId>
-                <version>1.0.3</version>
+                <version>1.0.4</version>
                 <scope>test</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
-    
+
     <build>
         <pluginManagement>
             <plugins>
+                <plugin>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.3</version>
+                </plugin>
                 <plugin>
                     <artifactId>maven-deploy-plugin</artifactId>
                     <version>2.8.2</version>
                 </plugin>
                 <plugin>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.18.1</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-shade-plugin</artifactId>
+                    <version>2.4.1</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>exec-maven-plugin</artifactId>
+                    <version>1.4.0</version>
+                </plugin>
+                <plugin>
                     <groupId>net.alchim31.maven</groupId>
                     <artifactId>scala-maven-plugin</artifactId>
-                    <version>3.2.0</version>
+                    <version>3.2.2</version>
                     <configuration>
-                        <recompileMode>incremental</recompileMode>
+                        <source>1.8</source>
+                        <target>1.8</target>
                         <scalaCompatVersion>2.11</scalaCompatVersion>
-                        <scalaVersion>2.11.6</scalaVersion>
+                        <scalaVersion>2.11.7</scalaVersion>
+                        <recompileMode>incremental</recompileMode>
                     </configuration>
                     <executions>
                         <execution>
@@ -74,6 +98,9 @@
                             </goals>
                             <configuration>
                                 <args>
+                                    <arg>-Ybackend:GenBCode</arg>
+                                    <arg>-Ydelambdafy:method</arg>
+                                    <arg>-target:jvm-1.8</arg>
                                     <arg>-deprecation</arg>
                                 </args>
                             </configuration>
