--- a/benchmark/pom.xml
+++ b/benchmark/pom.xml
@@ -39,6 +39,12 @@
             <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>projecteuler-groovy</artifactId>
+            <version>${project.version}</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <prerequisites>
