--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>clojure</module>
         <module>java</module>
         <module>scala</module>
+        <module>groovy</module>
         <module>benchmark</module>
     </modules>
 
