--- a/benchmark/pom.xml
+++ b/benchmark/pom.xml
@@ -45,6 +45,12 @@
             <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>projecteuler-frege</artifactId>
+            <version>${project.version}</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <prerequisites>
