--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>java</module>
         <module>scala</module>
         <module>groovy</module>
+        <module>frege</module>
         <module>benchmark</module>
     </modules>
 
